fix text alignment

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -60,4 +60,5 @@
   font-size: 24px;
   font-family: var(--font-limelight);
   line-height: 36px;
+  text-align: center;
 }
